crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/comparison_operators/bytes/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Operator == cannot be applied to operands of type "bytes storage" and "bytes storage".
   ╭─[input.sol:3:57]
   │
 3 │ contract test { bytes a; bytes b; fallback() external { a == b; } }
   │                                                         ───┬──  
   │                                                            ╰──── Error occurred here.
───╯
